--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  color: #3a3b3d;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f5f5f5;
 }
