--- a/src/Components/LandingPage/Header/NavBar/NavBar.css
+++ b/src/Components/LandingPage/Header/NavBar/NavBar.css
@@ -44,12 +44,12 @@
   animation: slide 0.3s ease-in-out;
 }
 @keyframes slide {
-  0% {
+  from {
     opacity: 0;
     transform: translateX(-100%);
   }
 
-  100% {
+  to {
     opacity: 1;
     transform: translateX(0);
   }
