--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap');
+
+html,
 body {
   margin: 0;
   padding: 0;
@@ -9,4 +11,19 @@ body {
   color: #3a3b3d;
   font-family: 'Open Sans', sans-serif;
   background-color: #f5f5f5;
+  scroll-behavior: smooth;
+}
+::-webkit-scrollbar {
+  width: 4px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #7c7b7b9a;
+  border-radius: 10px;
+  height: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
 }
