--- a/src/index.css
+++ b/src/index.css
@@ -36,3 +36,125 @@ body {
   background-color: #5b5b5c !important;
   border-radius: 50%;
 }
+.banner:hover img {
+  transform: scale(1.2);
+  transition: all 0.2s linear;
+}
+
+.moving_ani {
+  transition: 0.3s ease-in-out;
+  animation: move 13s linear infinite;
+  overflow: hidden;
+}
+@keyframes move {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+.pump_ani {
+  transition: 0.3s linear;
+  animation: pump 1s linear infinite;
+}
+@keyframes pump {
+  0% {
+    color: #e47d58;
+  }
+  100% {
+    color: #9e1a46;
+  }
+}
+.hero__section {
+  background-image: url('../src/Assets/Hero.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+}
+
+.hero__section-2 {
+  background-image: url('../src/Assets/Hero2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: right;
+}
+
+.hero_sub-1 {
+  background-image: linear-gradient(
+      to top left,
+      rgba(77, 77, 78, 0.37),
+      rgba(65, 65, 66, 0.315)
+    ),
+    url('../src/Assets/shoe.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 17rem;
+}
+.hero_sub-2 {
+  background-image: linear-gradient(
+      to top left,
+      rgba(77, 77, 78, 0.699),
+      rgba(65, 65, 66, 0.596)
+    ),
+    url('../src/Assets/bag2.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: 100%;
+  height: 17rem;
+}
+
+.btn:hover,
+.btn:active {
+  color: #e83a59;
+}
+.btn {
+  width: 4rem;
+  height: 4rem;
+  margin: 1rem;
+
+  font-size: 2rem;
+}
+.left {
+  position: absolute;
+  top: 50%;
+  left: 0;
+}
+.right {
+  position: absolute;
+  top: 50%;
+  right: 25%;
+}
+@media screen and (max-width: 770px) {
+  .hero__section {
+    background-image: none;
+  }
+  .hero__section-2 {
+    background-image: none;
+  }
+  .left {
+    position: absolute;
+    top: 20%;
+    left: -2%;
+  }
+  .right {
+    position: absolute;
+    top: 20%;
+    right: -10%;
+  }
+}
+@media screen and (max-width: 1024px) {
+  .left {
+    position: absolute;
+    top: 20%;
+    left: 0;
+  }
+  .right {
+    position: absolute;
+    top: 20%;
+    right: -10%;
+  }
+}
