--- a/src/index.css
+++ b/src/index.css
@@ -158,3 +158,15 @@ body {
     right: -10%;
   }
 }
+
+.card_design::before {
+  content: '';
+  border-bottom: 8px solid #9e1a46;
+  border-left: 8px solid #fff;
+  border-right: 8px solid #9e1a46;
+  border-top: 8px solid #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  filter: drop-shadow(6px 4px 3px rgba(0, 0, 0, 0.4));
+}
